[fix] resume pdf button broken in sm view.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -508,7 +508,7 @@ h4.about-text {
   padding: 2.6em 0;
 }
 .btn {
-  padding: 20px 60px;
+  padding: 15px 20px;
   letter-spacing: 1px;
   font-size: 0.9em;
   border-radius: 40px;
